# lepton-number-violation-at-hadron-colliders

./: .clang-tidy  .gitignore  CITATION.bib  README.md  madanalyse-dimuonss-fcchh.py  madanalyse-fcchh-generator.py  madanalyse-production-fcchh.py  madanalyse-signal-background.sh  madanalyse-signal-contributions.py  madanalyse-summary.py  madanalyse-trimuon-fcchh.py  madplot-scaling.py  madplot-signal-background.py  madplot-summary-contributions.py  madproduce-fcchh.sh  madproduce.py  prek.toml
Analysis/: CMakeLists.txt
Analysis/Common/: CMakeLists.txt  Kinematics.cpp  Oscillations.cpp
Analysis/DelphesWrapper/: CMakeLists.txt  CustomPrints.cpp  TreeNavigation.cpp
Analysis/DimuonSS/: CMakeLists.txt  TreeWriter.cpp
Analysis/DimuonSS-FCChh-Detector/: CMakeLists.txt  main.cpp
Analysis/DimuonSS-FCChh-Generator/: CMakeLists.txt  GeneratorIdentity.cpp  main.cpp
Analysis/MCPID/: CMakeLists.txt  ParticleName.cpp
Analysis/MG5_aMC/: CMakeLists.txt  MadgraphData.cpp  Particle.cpp
Analysis/MachineLearning/: CMakeLists.txt  DataLoaderWrapper.cpp  DatasetSplitHistograms.cpp  MethodHistograms.cpp  Methods.cpp  Observables.cpp  TMVAApplier.cpp  TMVAOptions.cpp  TMVAPlotter.cpp  TMVAReaderWrapper.cpp  TMVASurvivalRate.cpp
Analysis/Models/: CMakeLists.txt  Generic.cpp  HeavyN_Dirac.cpp  HeavyN_Majorana.cpp  SM.cpp  SPSS.cpp  SeesawICurrents.cpp  pSPSS.cpp
Analysis/ReconstructedData/: CMakeLists.txt  ReconstructedEventData.cpp  TreeReaderBase.cpp
Analysis/Reconstruction/: CMakeLists.txt  TreeWriterBase.cpp
Analysis/SimulationReaders/: CMakeLists.txt  read_slha.cc
Analysis/Statistics/: CMakeLists.txt  Distributions.cpp  Separation.cpp  Significance.cpp
Analysis/Summary/: CMakeLists.txt  main.cpp
Analysis/TMVA-Apply/: CMakeLists.txt  main.cpp
Analysis/TMVA-Distribution/: CMakeLists.txt  main.cpp
Analysis/TMVA-Separation/: CMakeLists.txt  main.cpp
Analysis/TMVA-Train/: CMakeLists.txt  main.cpp
Analysis/Trimuon/: CMakeLists.txt  TreeWriter.cpp
Analysis/Trimuon-FCChh-Detector/: CMakeLists.txt  main.cpp
Analysis/Trimuon-FCChh-Generator/: CMakeLists.txt  main.cpp
Analysis/include/Common/: Kinematics.hpp  Log.hpp  Observable.hpp  Oscillations.hpp  PythiaStatus.hpp
Analysis/include/Constants/: Experiments.hpp  Maths.hpp  Physics.hpp  SMMasses.hpp
Analysis/include/DelphesWrapper/: CustomPrints.hpp  DelphesConcepts.hpp  DelphesPosition.hpp  DelphesVector3D.hpp  DelphesVector4D.hpp  DisplacedJet.hpp  ReaderATLAS.hpp  ReaderBase.hpp  ReaderCMS.hpp  ReaderCMS2.hpp  ReaderFCChh.hpp  ReaderIDEA.hpp  ReaderParticle.hpp  TreeNavigation.hpp
Analysis/include/DimuonSS/: TreeReader.hpp  TreeWriter.hpp
Analysis/include/DimuonSS-FCChh-Generator/: GeneratorIdentity.hpp
Analysis/include/MCPID/: HeavyN.hpp  ParticleName.hpp  SM.hpp  SPSS.hpp  SeesawICurrents.hpp  pSPSS.hpp
Analysis/include/MG5_aMC/: MadgraphData.hpp  Particle.hpp
Analysis/include/MachineLearning/: DataLoaderWrapper.hpp  DatasetSplit.hpp  DatasetSplitHistograms.hpp  MethodHistograms.hpp  Methods.hpp  Observables.hpp  TMVAApplier.hpp  TMVAOptions.hpp  TMVAPlotter.hpp  TMVAReaderWrapper.hpp  TMVASurvivalRate.hpp
Analysis/include/Models/: Generic.hpp  HeavyN_Dirac.hpp  HeavyN_Majorana.hpp  SM.hpp  SPSS.hpp  SeesawICurrents.hpp  pSPSS.hpp
Analysis/include/ReconstructedData/: ReconstructedEventData.hpp  ReconstructedEventDataKeys.hpp  TreeReaderBase.hpp
Analysis/include/Reconstruction/: SurvivalRate.hpp  SurvivesAllCuts.hpp  TreeWriterBase.hpp
Analysis/include/SimulationReaders/: read_slha.h
Analysis/include/Statistics/: ConfidenceLevel.hpp  Distributions.hpp  Separation.hpp  Significance.hpp
Analysis/include/Trimuon/: TreeReader.hpp  TreeWriter.hpp
DimuonSS@FCChh/: SPSS_251209a-qq+gq+aq-01.history  SPSS_251209a-qq+gq+aq-02.history  SPSS_251209a-qq+gq+aq-03.history  SPSS_251209a-qq+gq+aq-04.history  SPSS_251209a-qq+gq+aq-05.history  SPSS_251209a-qq+gq+aq-06.history  SPSS_251209a-qq+gq+aq-07.history  SPSS_251209a-qq+gq+aq-08.history  SPSS_251209a-qq+gq+aq-09.history  SPSS_251209a-qq+gq+aq-10.history  SPSS_251209a-qq+gq+aq-11.history  SPSS_251209a-qq+gq+aq-12.history  SPSS_251209a-qq+gq+aq-13.history  SPSS_251209a-qq+gq+aq-14.history  SPSS_251209a-qq+gq+aq-15.history  SPSS_251209a-qq+gq+aq-16.history  SPSS_251209a-qq+gq+aq-17.history  SPSS_251209a-qq+gq+aq-18.history  SPSS_251209a-qq+gq+aq-19.history  SPSS_251209a-qq+gq+aq-20.history  SPSS_251209a-qq+gq+aq-21.history  SPSS_251209a-qq+gq+aq-22.history  SPSS_251209a-qq+gq+aq-23.history  SPSS_251209a-qq+gq+aq-24.history  SPSS_251209a-qq+gq+aq-25.history  SPSS_251209a-qq+gq+aq-26.history  SPSS_251209a-qq+gq+aq-27.history  SPSS_251209a-qq+gq+aq-28.history  SPSS_251209a-qq+gq+aq-29.history  SPSS_251209a-qq+gq+aq-30.history  SPSS_251209a-qq+gq+aq-31.history  SPSS_251209a-qq+gq+aq-32.history  SPSS_251209a-qq+gq+aq-33.history  SPSS_251209a-qq+gq+aq-34.history  SPSS_251209a-qq+gq+aq-35.history  SPSS_251209a-qq+gq+aq-36.history  (+117 more)
(+206 files in other folders)
